# py-gpx-fix-v2

./: README.md  cleaned.gpx  input.gpx  pyproject.toml  reference.gpx
docs/: COORDINATE_SUBSET_PLAN.md  PLAN.md
src/gpx_clean/: __main__.py  cli.py  cli_subset.py  filter.py  io.py  metrics.py  smooth.py  subset.py
tests/: test_cli.py  test_filter.py  test_io.py  test_subset.py
tests/data/: sample_track.gpx
