[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gpx-clean"
version = "0.1.0"
description = "Remove implausible GPS outliers from GPX running tracks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gpxpy>=1.6.0",
    "geographiclib>=2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
gpx-clean = "gpx_clean.cli:main"
gpx-clean-subset = "gpx_clean.cli_subset:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
